--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+bench_ollama.py
+bench.sh
+log.txt
+data/chunked_data.json
+data/test_bm.json
+hyde/rag_results.json
