ms marco dataset preparation

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ bench_ollama.py
 bench.sh
 log.txt
 data/chunked_data.json
+data/chunked_data_ms_marco.json
 data/test_bm.json
 hyde/rag_results.json
 hype/rag_results.json
