--- a/.gitignore
+++ b/.gitignore
@@ -163,10 +163,10 @@ cython_debug/
 bench_ollama.py
 bench.sh
 log.txt
-data/chunked_data.json
-data/chunked_data_ms_marco.json
-data/test_bm.json
-hyde/rag_results.json
-hype/rag_results.json
-hype/chunks_with_questions.json
-base/rag_results.json
+data/*.json
+hyde/*.json
+hype/*.json
+base/*.json
+
+qdrant_storage
+results
